Quorum3/Library/Tests/TypeCheckerGenerated/Pass/ImpAssignTextTextField.quorum
class Main
    text v = "text"
    action Main
        Test(v)
    end

    action Test(text var)
        if var = "text"
            output "passed"
        end
    end
end
