Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignIntegerTextField.quorum
class Main
    text v = text
    action Main
        Test(v)
    end

    action Test(integer var)
    end
end
